chore(deps): upgrade Microsoft.Build.Tasks.Core to 17.14.28
Upgrade Microsoft.Build.Tasks.Core from previous version to 17.14.28 to address security vulnerabilities.

This is a security-focused update that brings the package to the latest stable version.

--- a/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
+++ b/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
@@ -31,6 +31,7 @@
         <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer"/>
         <PackageReference Include="Bogus"/>
         <PackageReference Include="Hangfire.AspNetCore"/>
+        <PackageReference Include="Microsoft.Build.Tasks.Core"/>
         <PackageReference Include="Scrutor"/>
 
         <PackageReference Include="AspNetCore.SignalR.OpenTelemetry"/>
